# python-project-lvl2

./: .codeclimate.yml  .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml
gen_diff/: __init__.py  const.py  diff_output.py  engine.py  parser.py  parsers.py
gen_diff/format/: default.py  json.py  plain.py
gen_diff/formatters/: __init__.py  to_json.py  to_str.py  to_text.py
gen_diff/formatting/: __init__.py  to_str.py
gen_diff/scripts/: __init__.py  diff_plain.py  gendiff.py
scripts/: gendiff.py
tests/: .coverage  test_diff.py  tests_diff_plain.py
tests/fixtures/: json_result.json  recursion_result_yml.txt  result.txt
