[tool.poetry]
name = "Genfiff"
version = "0.1.0"
description = "Gendiff"
authors = ["GreyGreyWolf"]
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "3.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
