[tool.poetry]
name = "GreyWolf_Difference_Generator"
version = "0.1.0"
description = "Gendiff"
authors = ["GreyGreyWolf"]
packages = [
  { include = "gen_diff" },
  ]


[tool.poetry.dependencies]
python = "3.7.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
  gendiff = "gen_diff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
